--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     # The executor is the environment in which the steps below will be executed - below will use a python 3.10.2 container
     # Change the version below to your required version of python
     docker:
-      - image: jupyter/scipy-notebook
+      - image: ubuntu # jupyter/scipy-notebook
     steps:
       - run:
           name: Run construction
