--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - run:
           name: Install docker
-          command: apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+          command: apt-get install docker.io
       - run:
           name: Run construction
           command: docker build -t davcorsar/linear-regression-house-pricing:latest .
