Updating YAML file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,8 @@ jobs:
       - image: ubuntu
     steps:
       - run:
-          name: Install docker
-          command: apt install docker.io
-      - run:
           name: Run construction
+          uses: docker/login-action@v1
           command: docker build -t davcorsar/linear-regression-house-pricing:latest .
       - run:
           name: Run test
