--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - run:
          name: Install docker
-         command: apt-get update && apt-ger install docker.io
+         command: apt-get update && apt-get install docker.io
       - run:
           name: Run construction
           # uses: docker/login-action@v1
