--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,24 +16,28 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build -t davcorsar/linear-regression-house-pricing:latest .
-
-
-
-  test:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
     - name: Run the Docker image
       run: docker run davcorsar/linear-regression-house-pricing
-
-  push:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
     - name: Push the Docker image
       run: docker push davcorsar/linear-regression-house-pricing:latest
+
+
+
+  #test:
+
+   # runs-on: ubuntu-latest
+
+    #steps:
+#    - uses: actions/checkout@v3
+ #   - name: Run the Docker image
+  #    run: docker run davcorsar/linear-regression-house-pricing
+
+#  push:
+
+ #   runs-on: ubuntu-latest
+
+  #  steps:
+   # - uses: actions/checkout@v3
+    #- name: Push the Docker image
+     # run: docker push davcorsar/linear-regression-house-pricing:latest
 
