--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,8 @@ jobs:
       run: docker build -t davcorsar/linear-regression-house-pricing:latest .
     - name: Run the Docker image
       run: docker run davcorsar/linear-regression-house-pricing
+    - name: Login to DockerHub
+      run: docker login -u "myusername" -p "mypassword" docker.io
     - name: Push the Docker image
       run: docker push davcorsar/linear-regression-house-pricing:latest
 
