Update docker-image.yaml final

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,28 +18,9 @@ jobs:
       run: docker build -t davcorsar/linear-regression-house-pricing:latest .
     - name: Run the Docker image
       run: docker run davcorsar/linear-regression-house-pricing
+    - name: Run the Docker image 2
+      run: docker run davcorsar/linear-regression-house-pricing --mode=predict
     - name: Login to DockerHub
       run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }} docker.io
     - name: Push the Docker image
       run: docker push davcorsar/linear-regression-house-pricing:latest
-
-
-
-  #test:
-
-   # runs-on: ubuntu-latest
-
-    #steps:
-#    - uses: actions/checkout@v3
- #   - name: Run the Docker image
-  #    run: docker run davcorsar/linear-regression-house-pricing
-
-#  push:
-
- #   runs-on: ubuntu-latest
-
-  #  steps:
-   # - uses: actions/checkout@v3
-    #- name: Push the Docker image
-     # run: docker push davcorsar/linear-regression-house-pricing:latest
-
